--- a/templates/posts/details.rs.html
+++ b/templates/posts/details.rs.html
@@ -3,7 +3,9 @@
 @use plume_models::posts::Post;
 @use plume_models::tags::Tag;
 @use plume_models::users::User;
+@use rocket::http::RawStr;
 @use std::path::Path;
+@use std::path::PathBuf;
 @use validator::ValidationErrors;
 @use crate::templates::{base, partials::comment};
 @use crate::template_utils::*;
